--- a/index.htm
+++ b/index.htm
@@ -20,13 +20,33 @@
 			<h1>HTML5 Web Engine</h1>
 			<nav>
 				<ul id="link"> 
-					<li><a href="./">Home</a></li> 
-					<li><a href="./#/download">Download</a></li> 
+					<li>Home</li> 
 				</ul>
 			</nav>
 		</header>
 		<section>
 			<article id="main">
+				<h2>Home</h2>
+				<p>
+				Hey there.
+				</p>
+				<p>
+				This website is just a place for me to share a nifty little web engine I built
+				 using HTML 5, CSS, Sammy.js, jQuery, and a little elbow grease. :-)
+				</p>
+				<p>
+				The goal was just to have a setup-and-go web engine,
+				 for people who don't have the time, energy, or knowledge
+				 to code one up for themselves.
+				</p>
+				<p>
+				It includes some debug logging features,
+				and loads all pages dynamically without
+				reloading the site or leaving the initial page.
+				(Single-page design). It also includes an Error
+				page in case anyone <a href="#/garbage">requests garbage</a>.
+				</p>
+
 			</article>
 		</section>
 		<footer>
