--- a/index.htm
+++ b/index.htm
@@ -44,7 +44,7 @@
 				and loads all pages dynamically without
 				reloading the site or leaving the initial page.
 				(Single-page design). It also includes an Error
-				page in case anyone <a href="#/garbage">requests garbage</a>.
+				page in case anyone requests garbage.
 				</p>
 
 			</article>
