--- a/index.htm
+++ b/index.htm
@@ -40,11 +40,18 @@
 				 to code one up for themselves.
 				</p>
 				<p>
-				It includes some debug logging features,
+				Style-wise the pages fade in and out when you change from one
+				page to the next, which is pleasing to the eye.
+				</p>
+				<p>
+				The engine also includes some debug logging features,
 				and loads all pages dynamically without
 				reloading the site or leaving the initial page.
 				(Single-page design). It also includes an Error
 				page in case anyone requests garbage. 
+				</p>
+				<p>
+				You can <a href="https://github.io/paulbhartzog/HTML5-Website-Engine">download it on GitHub</a>!
 				</p>
 
 			</article>
